# KaiTerm

./: .gitignore  AGENTS.md  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json  ssh-sftp-tool.html
.github/workflows/: release.yml
docs/kaiterm/: 1_需求文档.md  2_实施计划.md
specs/: 1_产品概述.md
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  error.rs  lib.rs  local_term.rs  main.rs  models.rs  sftp_ops.rs  ssh_session.rs  sys_info.rs  transfers.rs
src/components/: ConflictDialog.vue  ConnectionModal.vue  CustomSchemeCreator.vue  GroupManager.vue  HostKeyDialog.vue  LocalFilePanel.vue  SettingsPanel.vue  SftpPanel.vue  SideBar.vue  StatusBar.vue  SysInfoPanel.vue  TerminalPanel.vue  TitleBar.vue  ToastNotification.vue  TransferPanel.vue
src/stores/: connection.js  safeInvoke.js  sftp.js  terminal.js  theme.js  transfer.js
src/themes/: index.js
