[package]
name = "klm"
version = "0.1.0"
description = "KaiTerm - SSH & SFTP integrated tool"
authors = ["you"]
edition = "2021"

[lib]
name = "klm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
russh = { version = "0.62", default-features = false, features = ["ring", "rsa", "async-trait"] }
async-trait = "0.1"
ssh-key = { version = "0.7.0-rc.11", features = ["alloc"] }
russh-keys = "0.50.0-beta.7"
russh-sftp = "2.3.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
base64 = "0.22"
directories = "6"
encoding_rs = "0.8"
portable-pty = "0.8"
log = "0.4"
env_logger = "0.11"
tauri-plugin-dialog = "2.7.1"
home = "0.5"
